[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
itertools = "0.8.2"
rand = "0.8.5"
xgboost = "0.1.4"
serde_json = "1.0"
murmur3 = "0.5.1"
st_core = { version = "^0", path = "../st_core" }
series = { version = "^0", path = "../series" }


