[package]
name = "st_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasciigraph = "0.1.1"
itertools = "0.8.2"
rand = "0.8.5"
csv = "1.1.6"
polars-core = "0.20.0"
polars-io = { version = "0.20.0", features = ["csv-file"] }


